# operations-pipline

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260607_0001_initial_schema.py  20260607_0002_publish_and_llm_logs.py  20260607_0003_publish_modes.py  20260607_0004_media_assets.py
backend/app/: clear_db.py  init_db.py  main.py  seed_demo.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: brand_profiles.py  contents.py  dashboard.py  media.py  projects.py  publish.py  review.py  topics.py
backend/app/core/: config.py  db.py
backend/app/models/: __init__.py  brand_profile.py  content_asset.py  content_task.py  llm_call_log.py  media_asset.py  project.py  publish_job.py  publish_result.py  topic_candidate.py
backend/app/schemas/: brand_profile.py  content.py  dashboard.py  media.py  project.py  publish.py  review.py  topic.py
backend/app/services/agents/: topic_agent.py  writer_agent.py
backend/app/services/llm/: content_service.py  gateway.py  topic_service.py
backend/app/services/publishers/: assist_preview_service.py  base.py  factory.py  manual_export.py  playwright_assisted.py  playwright_runner.py  xiaohongshu_executor.py
backend/app/services/repositories/: brand_profile_repo.py  content_repo.py  dashboard_repo.py  llm_log_repo.py  media_repo.py  project_repo.py  publish_repo.py  topic_repo.py
backend/app/services/workflows/: content_workflow.py  publish_workflow.py  topic_workflow.py
backend/app/tasks/: celery_app.py
(+21 files in other folders)
