[project]
name = "content-automation-backend"
version = "0.1.0"
description = "MVP backend for automated content production"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "openai>=1.35.0",
    "playwright>=1.45.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
